--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>SPE Khazar</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LYNBD505PL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LYNBD505PL');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
