--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SPE Khazar University Student Chapter was established on 1st of January in 2005. The mission of the chapter is to provide students with SPE membership which gives them access to the technical and non-technical knowledge besides will keep them in touch with the prestigious, dynamic community of petroleum professionals worldwide and many other benefits."
     />
     <!-- Google tag (gtag.js) -->
     <script
