--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script
