--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>SPE Khazar</title>
+    <meta name="mailru-domain" content="01YPzg6XrQMC5Yp3" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
